--- a/docs/docs/genai/tracing/concepts/trace/feedback.mdx
+++ b/docs/docs/genai/tracing/concepts/trace/feedback.mdx
@@ -329,13 +329,13 @@ Feedback integrates seamlessly with MLflow's ecosystem:
 
 To begin using feedback in your GenAI evaluation workflow:
 
-**[LLM Evaluation Guide](/genai/evaluate)**: Learn how to evaluate your GenAI applications
+**[LLM Evaluation Guide](/genai/eval-monitor)**: Learn how to evaluate your GenAI applications
 
-**[Custom Metrics](/genai/evaluate/custom-metrics)**: Create domain-specific evaluation functions
+**[Custom Metrics](/genai/eval-monitor)**: Create domain-specific evaluation functions
 
 **[Trace Analysis](/genai/tracing/search-traces)**: Explore how to query and analyze trace data with feedback
 
-**[Quality Monitoring](/genai/tracing/prod-monitoring)**: Set up ongoing quality assessment
+**[Quality Monitoring](/genai/tracing/prod-tracing)**: Set up ongoing quality assessment
 
 ---
 
