--- a/docs/docs/genai/tracing/data-model.mdx
+++ b/docs/docs/genai/tracing/data-model.mdx
@@ -261,7 +261,7 @@ Span types are a way to categorize spans within a trace. By default, the span ty
     | `"UNKNOWN"`    | A default span type that is used when no other span type is specified.                 |
   </TabItem>
   <TabItem value="usage" label="Usage Examples">
-    To set a span type, you can pass the `span_type` parameter to the <APILink fn="mlflow.trace" /> decorator or <APILink fn="mlflow.start_span" /> context manager. When you are using [automatic tracing](/tracing/app-instrumentation/automatic), the span type is automatically set by MLflow.
+    To set a span type, you can pass the `span_type` parameter to the <APILink fn="mlflow.trace" /> decorator or <APILink fn="mlflow.start_span" /> context manager. When you are using [automatic tracing](/genai/tracing/app-instrumentation/automatic), the span type is automatically set by MLflow.
 
     ```python
     import mlflow
@@ -690,15 +690,13 @@ def analyze_error_patterns(traces):
 
 ## Next Steps
 
-**[Tracing Concepts](/tracing/concepts)**: Understand the fundamental concepts behind tracing
+**[Tracing Concepts](/genai/tracing/concepts/trace-instrumentation)**: Understand the fundamental concepts behind tracing
 
-**[Querying Traces](/tracing/api/search)**: Learn how to search and retrieve trace data programmatically
+**[Querying Traces](/genai/tracing/search-traces)**: Learn how to search and retrieve trace data programmatically
 
-**[Automatic Tracing](/tracing/app-instrumentation/automatic)**: Get started with one-line tracing for supported libraries
+**[Automatic Tracing](/genai/tracing/app-instrumentation/automatic)**: Get started with one-line tracing for supported libraries
 
-**[Manual Tracing](/tracing/app-instrumentation/manual-tracing)**: Create custom spans for detailed instrumentation
-
-**[Advanced Patterns](/tracing/app-instrumentation/manual-tracing#advanced-patterns)**: Learn about distributed tracing, performance optimization, and custom trace management
+**[Manual Tracing](/genai/tracing/app-instrumentation/manual-tracing)**: Create custom spans for detailed instrumentation
 
 ---
 
