--- a/docs/docs/genai/tracing/index.mdx
+++ b/docs/docs/genai/tracing/index.mdx
@@ -5,9 +5,9 @@ import { APILink } from "@site/src/components/APILink";
 
 # MLflow Tracing for LLM Observability
 
-**MLflow Tracing** is a powerful feature designed to provide **end-to-end observability** for your Generative AI (GenAI) applications, including complex agent-based systems. By **capturing detailed end-to-end execution information**—from initial inputs through every intermediate step to the final output—and enabling you to [**capture user feedback**](/genai/tracing/collect-user-feedback) and [**systematically evaluate performance**](/genai/evaluation), MLflow Tracing helps you confidently **improve application quality**.
+**MLflow Tracing** is a feature that enhances LLM observability in your Generative AI (GenAI) applications by capturing detailed information about the execution of your application's services. Tracing provides a way to record the inputs, outputs, and metadata associated with each intermediate step of a request, enabling you to easily pinpoint the source of bugs and unexpected behaviors.
 
-With MLflow Tracing, you can debug and understand complex application flows, monitor performance and optimize costs, systematically evaluate and enhance quality, ensure auditability, and leverage broad framework support. It achieves this by recording detailed inputs, outputs, and metadata for each step. MLflow Tracing offers [**automatic, no-code-added integrations**](/genai/tracing/app-instrumentation/automatic) with **over 20 popular GenAI libraries**, providing immediate observability. For any other Python-based GenAI code or custom components, MLflow's [**flexible instrumentation APIs**](/genai/tracing/app-instrumentation/manual-tracing) can be used to capture detailed traces, regardless of the specific frameworks in use.
+MLflow Tracing offers [**automatic, no-code-added integrations**](/genai/tracing/app-instrumentation/automatic) with **over 20 popular GenAI libraries**, providing immediate observability with just a single line of code. For any other Python-based GenAI code or custom components, MLflow's [**flexible instrumentation APIs**](/genai/tracing/app-instrumentation/manual-tracing) can be used to capture detailed traces, regardless of the specific frameworks in use.
 
 **Ready to get started? See how to [Instrument your app](/genai/tracing/app-instrumentation).**
 
@@ -15,202 +15,201 @@ With MLflow Tracing, you can debug and understand complex application flows, mon
 
 ![Tracing Gateway Video](/images/llms/tracing/tracing-top.gif)
 
-## Quick Start Example
-
-Here's how easy it is to get started with MLflow Tracing in just a few lines of code:
-
-```python
-import mlflow
-import openai
-import os
-
-# Configure your environment
-os.environ["OPENAI_API_KEY"] = "your-api-key-here"
-
-# Enable automatic tracing for OpenAI - that's it!
-mlflow.openai.autolog()
-
-# Set up MLflow tracking
-mlflow.set_tracking_uri("http://localhost:5000")  # or your MLflow server
-mlflow.set_experiment("my-genai-app")
-
-# Your existing OpenAI code works unchanged
-client = openai.OpenAI()
-response = client.chat.completions.create(
-    model="gpt-4o-mini",
-    messages=[{"role": "user", "content": "Explain MLflow Tracing"}],
-    max_tokens=100,
-)
-
-# Traces are automatically captured and logged to MLflow!
-```
-
-With just `mlflow.openai.autolog()`, every OpenAI call in your application is now automatically traced, capturing inputs, outputs, latencies, and metadata. No other code changes required!
-
-:::tip
-Start the MLflow UI with `mlflow ui` in your terminal to view your traces at `http://localhost:5000`.
-:::
-
 ## Why Choose MLflow Tracing?
 
-MLflow Tracing stands out as the ideal observability solution for GenAI applications:
+<details>
+  <summary>Why Choose MLflow?</summary>
+
+  **🪽 Free and Open** - MLflow is open source and 100% FREE. You don't need to pay additional SaaS costs to add observability to your GenAI stack. Your trace data is hosted on your own infrastructure.
+
+  **🥇 Standard** - MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability spec. You can export your trace data to various services in your existing observability stack, such as Grafana, Prometheus, Datadog, New Relic, and more.
+
+  **🤝 Framework Support** - MLflow Tracing integrates with 20+ GenAI libraries, including OpenAI, LangChain, LlamaIndex, DSPy, and others. See the [Automatic Tracing](#automatic-tracing) section for the full list of supported libraries.
+
+  **🔄 End-to-End** - MLflow is designed for managing the end-to-end machine learning lifecycle. With its model tracking and evaluation capabilities, MLflow empowers you to leverage your trace data fully.
+
+  **👥 Community** - MLflow boasts a vibrant Open Source community as a part of the Linux Foundation. With 19,000+ GitHub Stars and 15MM+ monthly downloads, MLflow is a trusted standard in the MLOps/LLMOps ecosystem.
+
+</details>
+
+## Use Cases Throughout the ML Lifecycle
+
+MLflow Tracing empowers you throughout the end-to-end lifecycle of a machine learning project. Here's how it helps you at each step of the workflow:
+
 
 <Tabs>
-  <TabItem value="free-open" label="Free & Open Source" default>
-    **🪽 Free and Open** - MLflow is open source and 100% FREE. You don't need to pay additional SaaS costs to add observability to your GenAI stack. Your trace data is hosted on your own infrastructure.
+  <TabItem value="debugging" label="Debugging" default>
+    <div class="flex-column">
 
-    **👥 Community** - MLflow boasts a vibrant Open Source community as a part of the Linux Foundation. With 19,000+ GitHub Stars and 15MM+ monthly downloads, MLflow is a trusted standard in the MLOps/LLMOps ecosystem.
+      <div class="flex-row">
+        <div class="flex-item">
+
+          #### Complete Debugging Experience in Your IDE or Notebook
+
+          MLflow's tracing capabilities provide deep insights into what happens beneath the abstractions of GenAI libraries, helping you precisely identify where issues occur.
+
+          You can navigate traces seamlessly **within** your preferred IDE, notebook, or within the [MLflow UI](/genai/tracing/observe-with-traces/ui) eliminating the hassle of switching between multiple tabs or searching through an overwhelming list of traces.
+
+
+        </div>
+
+        <div class="flex-item padding-md">
+          ![Trace Error](/images/llms/tracing/trace-exception.gif)
+        </div>
+      </div>
+    </div>
+
   </TabItem>
-  <TabItem value="standard" label="Industry Standard">
-    **🥇 Standard** - MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability spec. You can export your trace data to various services in your existing observability stack, such as Grafana, Prometheus, Datadog, New Relic, and more.
+  <TabItem value="dataset" label="Evaluation Dataset">
+    <div class="flex-column">
+      <div class="flex-row">
+        <div class="flex-item">
 
-    **🔄 End-to-End** - MLflow is designed for managing the end-to-end machine learning lifecycle. With its model tracking and evaluation capabilities, MLflow empowers you to leverage your trace data fully.
+        #### Building a High-Quality Evaluation Dataset
+
+        Evaluating the performance of your GenAI application is crucial, but creating a reliable evaluation dataset can be challenging. Traces serve as a rich data source, helping you build high-quality datasets with precise metrics for internal components like retrievers and tools.
+
+        When combined with [MLflow LLM Evaluation](/genai/eval-monitor), MLflow offers a seamless experience for assessing and improving your application’s performance.
+
+        </div>
+
+        <div class="flex-item padding-md">
+          ![Trace Error](/images/llms/tracing/trace-exception.gif)
+        </div>
+      </div>
+    </div>
+
   </TabItem>
-  <TabItem value="framework-support" label="Framework Support">
-    **🤝 Framework Support** - MLflow Tracing integrates with 20+ GenAI libraries, including OpenAI, LangChain, LlamaIndex, DSPy, Anthropic, and others. See the [Automatic Tracing](#broad-framework-support--extensibility) section for the full list of supported libraries.
+  <TabItem value="inspect-quality" label="Inspect Quality">
+    <div class="flex-column">
+      <div class="flex-row">
+        <div class="flex-item">
 
-    **🔌 Extensible** - For custom frameworks or unsupported libraries, MLflow provides powerful manual tracing APIs that give you complete control over instrumentation.
+        #### Root Cause Analysis for Improved Quality
+
+        After evaluating your model using [MLflow LLM Evaluation](/genai/eval-monitor), you can explore auto-generated traces during the evaluation run to identify root causes of quality issues — for instance, insufficiently retrieved documents.
+
+        Traces empower you to analyze issues in detail and iterate quickly to enhance the quality of your application.
+
+        </div>
+
+        <div class="flex-item padding-md">
+          ![Trace Error](/images/llms/tracing/trace-exception.gif)
+        </div>
+      </div>
+    </div>
+
+  </TabItem>
+  <TabItem value="online-monitoring" label="Production Monitoring">
+    <div class="flex-column">
+      <div class="flex-row">
+        <div class="flex-item">
+
+        #### Monitor Applications with Your Favorite Observability Stack
+
+        Machine learning projects don’t end with the first launch. Continuous monitoring and incremental improvement are critical to long-term success.
+
+        Integrated with various observability platforms such as Databricks, Datadog, Grafana, and Prometheus, MLflow Tracing provides a comprehensive solution for monitoring your GenAI applications in production.
+        Refer to [Monitoring GenAI Application in Production](/genai/tracing/prod-tracing) for more details.
+
+        </div>
+
+        <div class="flex-item padding-md">
+          ![Monitoring](https://assets.docs.databricks.com/_static/images/generative-ai/monitoring/monitoring-hero.gif)
+        </div>
+      </div>
+    </div>
+
   </TabItem>
 </Tabs>
 
-## Debug and Understand Your Application
-
-MLflow Tracing provides deep insights into your application's behavior, facilitating a complete debugging experience across different environments. By capturing the **complete request-response cycle (Input/Output Tracking)** and the **execution flow**, you can visualize and understand your application's logic and decision-making process.
-
-Examining the **inputs, outputs, and metadata for each intermediate step** (e.g., retrieval, tool calls, LLM interactions) and associated [**user feedback**](/genai/tracing/collect-user-feedback) or the results of [**quality evaluations**](/genai/evaluation) allows you to:
-
-**In Development**: Get detailed visibility into what happens beneath the abstractions of GenAI libraries, helping you precisely identify where issues or unexpected behaviors occur.
-
-**In Production**: Monitor and debug issues in real-time. Traces capture errors and can include operational metrics like latency at each step, aiding in quick diagnostics.
-
-MLflow Tracing offers a **unified experience between development and production**: you instrument your application once, and tracing works consistently in both environments. This allows you to navigate traces seamlessly within your preferred environment—be it your IDE, notebook, or production monitoring dashboard—eliminating the hassle of switching between multiple tools or searching through overwhelming logs.
-
-![Trace Error](/images/llms/tracing/trace-exception.gif)
-
 ## Monitor Performance and Optimize Costs
 
-Understanding and optimizing the performance and cost of your GenAI applications is crucial. MLflow Tracing enables you to capture and monitor key operational metrics such as **latency, cost (e.g., token usage), and resource utilization** at each step of your application's execution.
+Understanding and optimizing the performance of your GenAI applications is crucial for maintaining efficient operations. MLflow Tracing enables you to capture and monitor key operational metrics such as **latency and execution timing** at each step of your application's execution.
 
-This allows you to:
-
-**Track and identify performance bottlenecks** within complex pipelines.
-
-**Monitor resource utilization** to ensure efficient operation.
-
-**Optimize cost efficiency** by understanding where resources or tokens are consumed.
-
-**Identify areas for performance improvement** in your code or model interactions.
-
-Furthermore, MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability specification. This compatibility allows you to export your trace data to various services in your existing observability stack. See [Export Traces to Other Services](/genai/tracing/integrations/open-telemetry) for more details.
+This comprehensive monitoring capability allows you to track and identify performance bottlenecks within complex pipelines, monitor execution efficiency to ensure optimal operation, and identify areas for performance improvement in your code or model interactions. By understanding where time is spent in your application flow, you can make informed decisions about optimization strategies.
 
 ## Evaluate and Enhance Application Quality
 
-Systematically assessing and improving the quality of your GenAI applications is a core challenge. MLflow Tracing helps by allowing you to **attach and track [user feedback](/genai/tracing/collect-user-feedback) and the results of [quality evaluations](/genai/evaluation)** (from LLM judges or custom metrics) directly to your traces.
+Systematically assessing and improving the quality of your GenAI applications is a core challenge. MLflow Tracing helps by allowing you to **attach and track [user feedback](/genai/tracing/collect-user-feedback) and the results of [quality evaluations](/genai/eval-monitor)** (from LLM judges or custom metrics) directly to your traces.
 
 This enables comprehensive quality assessment throughout your application's lifecycle:
 
 <Tabs>
   <TabItem value="development" label="During Development" default>
-    Evaluate traces using human reviewers or LLM judges to:
-
-    **Measure accuracy, relevance, and other quality aspects.**
-
-    **Track quality improvements** as you iterate on prompts, models, or retrieval strategies.
-
-    **Identify patterns in quality issues** (e.g., specific types of queries that lead to poor responses).
-
-    **Make data-driven improvements** to your application.
+    Evaluate traces using human reviewers or LLM judges to measure accuracy, relevance, and other quality aspects. Track quality improvements as you iterate on prompts, models, or retrieval strategies while identifying patterns in quality issues (e.g., specific types of queries that lead to poor responses). This data-driven approach enables you to make systematic improvements to your application.
   </TabItem>
   <TabItem value="production" label="In Production">
-    Monitor and assess quality in real-time by:
-
-    **Tracking quality metrics** (derived from user feedback and evaluation results) across deployments.
-
-    **Identifying sudden quality degradation** or regressions.
-
-    **Triggering alerts** for critical quality issues.
-
-    **Helping maintain quality** Service Level Agreements (SLAs).
+    Monitor and assess quality in real-time by tracking quality metrics (derived from user feedback and evaluation results) across deployments. Identify sudden quality degradation or regressions, trigger alerts for critical quality issues, and help maintain quality Service Level Agreements (SLAs).
   </TabItem>
 </Tabs>
 
 Traces from both evaluation runs and production monitoring can be explored to identify root causes of quality issues—for instance, insufficiently retrieved documents in a RAG system or degraded performance of a specific model. Traces empower you to analyze these issues in detail and iterate quickly.
 
-Moreover, traces are invaluable for **building high-quality evaluation datasets**. By capturing real user interactions and their outcomes, you can:
+Moreover, traces are invaluable for **building high-quality evaluation datasets**. By capturing real user interactions and their outcomes, you can curate representative test cases based on actual usage patterns, build comprehensive evaluation sets that cover diverse scenarios, and use this data to fine-tune models or improve retrieval mechanisms.
 
-**Curate representative test cases** based on actual usage patterns.
-
-**Build comprehensive evaluation sets** that cover diverse scenarios.
-
-**Use this data to fine-tune models** or improve retrieval mechanisms.
-
-When combined with [MLflow GenAI Evaluation](/genai/evaluation), MLflow offers a seamless experience for assessing and improving your application's quality.
+When combined with [MLflow GenAI Evaluation](/genai/eval-monitor), MLflow offers a seamless experience for assessing and improving your application's quality.
 
 ## Ensure Auditability and Compliance
 
 MLflow Tracing enables you to capture every execution of your application, creating a detailed audit trail of how every output was generated. This is essential for maintaining transparency, accountability, and compliance in your GenAI applications.
 
-With complete visibility into the execution flow—including all inputs, outputs, intermediate steps, and parameters used—you can:
-
-**Track and verify the origins of all outputs.**
-
-**Provide evidence for compliance requirements.**
-
-**Enable thorough post-hoc analysis** of your application's behavior for specific requests.
-
-**Debug historical issues** by examining past traces.
+With complete visibility into the execution flow—including all inputs, outputs, intermediate steps, and parameters used—you can track and verify the origins of all outputs, provide evidence for compliance requirements, enable thorough post-hoc analysis of your application's behavior for specific requests, and debug historical issues by examining past traces.
 
 This comprehensive logging ensures that you have the necessary records for internal audits or external regulatory needs.
 
-## Broad Framework Support & Extensibility
+## Industry-Standard Observability with OpenTelemetry
 
-MLflow Tracing is designed to fit into your existing GenAI development workflow with minimal friction. It integrates with **20+ popular GenAI libraries and frameworks** out-of-the-box, including OpenAI, LangChain, LlamaIndex, DSPy, Anthropic, and more. For many of these, tracing can be enabled with a single line of code (e.g., `mlflow.openai.autolog()`).
+MLflow Tracing is built on **OpenTelemetry**, the industry-standard open source specification for observability. This foundation ensures that your tracing implementation follows widely accepted standards and provides interoperability with the broader observability ecosystem.
 
-See the [Automatic Tracing](/genai/tracing/app-instrumentation/automatic) section and the [Integrations page](/genai/tracing/integrations) for the full list of supported libraries and how to use them.
+The OpenTelemetry compatibility means you can export your MLflow trace data to various monitoring and observability services in your existing infrastructure stack, including Grafana, Prometheus, Datadog, New Relic, and other OpenTelemetry-compatible systems. This standardization gives you the flexibility to integrate MLflow Tracing into your current monitoring workflows without vendor lock-in.
+
+By conforming to OpenTelemetry standards, MLflow Tracing ensures that your observability investment is portable and future-proof, allowing you to leverage the growing ecosystem of OpenTelemetry-compatible tools and services. See [Export Traces to Other Services](/genai/tracing/prod-tracing#opentelemetry-integration) for detailed integration instructions.
+
+## Automatic Tracing
+
+MLflow Tracing is integrated with various GenAI libraries and provides **one-line automatic tracing** experience for each library (and combinations of them!). Here are some of the 20+ supported frameworks:
+
+**Popular Frameworks**: [OpenAI](/genai/tracing/integrations/listing/openai), [LangChain](/genai/tracing/integrations/listing/langchain), [LangGraph](/genai/tracing/integrations/listing/langgraph), [LlamaIndex](/genai/tracing/integrations/listing/llama_index), [DSPy](/genai/tracing/integrations/listing/dspy), [Anthropic](/genai/tracing/integrations/listing/anthropic), [AutoGen](/genai/tracing/integrations/listing/autogen), [AG2](/genai/tracing/integrations/listing/ag2), [CrewAI](/genai/tracing/integrations/listing/crewai), [OpenAI Swarm](/genai/tracing/integrations/listing/swarm)
+
+**Model Providers**: [Bedrock](/genai/tracing/integrations/listing/bedrock), [Gemini](/genai/tracing/integrations/listing/gemini), [LiteLLM](/genai/tracing/integrations/listing/litellm), [Ollama](/genai/tracing/integrations/listing/ollama), [Groq](/genai/tracing/integrations/listing/groq), [Mistral](/genai/tracing/integrations/listing/mistral), [DeepSeek](/genai/tracing/integrations/listing/deepseek)
+
+**Specialized Tools**: [Instructor](/genai/tracing/integrations/listing/instructor), [txtai](/genai/tracing/integrations/listing/txtai), [Smolagents](/genai/tracing/integrations/listing/smolagents), [PydanticAI](/genai/tracing/integrations/listing/pydantic_ai)
+
+For the complete list and detailed integration examples, see the [Automatic Tracing](/genai/tracing/app-instrumentation/automatic) documentation and [Integrations page](/genai/tracing/integrations).
 
 This broad support means you can gain observability without significant code changes, leveraging the tools you already use. For custom components or unsupported libraries, MLflow also provides powerful [manual tracing APIs](/genai/tracing/app-instrumentation/manual-tracing).
 
-## Viewing and Analyzing Traces
+## Manual Tracing
 
-MLflow provides multiple ways to view and analyze your traces:
+In addition to the one-line auto tracing experience, MLflow offers Python SDK for manually instrumenting your code and manipulating traces:
 
-<Tabs>
-  <TabItem value="ui" label="MLflow UI" default>
-    The MLflow UI provides a comprehensive interface for exploring traces:
+- [Instrument a function with `@mlflow.trace` decorator](/genai/tracing/app-instrumentation/manual-tracing/fluent-apis#decorator)
+- [Instrument any block of code using `mlflow.start_span` context manager](/genai/tracing/app-instrumentation/manual-tracing/fluent-apis#context-manager)
+- [Group or annotate traces using tags](/genai/tracing/attach-tags)
+- [Disable tracing globally](/genai/tracing/app-instrumentation/automatic#disabling-tracing)
 
-    **Browse traces** in the experiment view with search and filtering capabilities
+Refer to the [Manual Tracing Guide](/genai/tracing/app-instrumentation/manual-tracing) for complete details about the SDK.
 
-    **Inspect detailed span hierarchies** with timing and metadata information
+## Reviewing and Querying Traces
 
-    **View inputs, outputs, and attributes** for each step in your application
+MLflow Traces can be reviewed and analyzed in several ways:
 
-    **Manage traces** with bulk operations like deletion and tag editing
+**MLflow UI**: The MLflow UI provides a rich interface for exploring traces. You can view traces for a specific experiment, run, and [search and filter traces](/genai/tracing/search-traces) based on various criteria. Start the UI by running `mlflow ui` in your terminal and navigating to `http://localhost:5000`.
 
-    Start the UI with `mlflow ui` and navigate to your experiment's "Traces" tab.
-  </TabItem>
-  <TabItem value="jupyter" label="Jupyter Notebooks">
-    View traces directly in your development environment:
+**Jupyter Notebook**: The trace UI is also available within Jupyter notebooks! The trace UI will automatically be displayed when a cell generates a trace, eliminating the need to switch between the notebook and web browser.
 
-    **Automatic display** when traces are generated in notebook cells
+**Programmatic Access**: Query and analyze traces with Python APIs to search traces with filters and conditions using <APILink fn="mlflow.search_traces" />, retrieve specific traces for detailed analysis, export data for custom analysis or integration with other tools, and build custom dashboards and monitoring solutions.
 
-    **Interactive exploration** without leaving your development context
+Trace data is useful for various downstream tasks, such as creating evaluation datasets for offline evaluation and production monitoring. MLflow provides several APIs to search and retrieve recorded traces programmatically. See [Searching and Retrieving Traces](/genai/tracing/search-traces) for more details.
 
-    **Seamless debugging** with traces appearing inline with your code
+## Production Monitoring
 
-    The trace UI automatically appears when you run traced operations in Jupyter notebooks.
-  </TabItem>
-  <TabItem value="programmatic" label="Programmatic Access">
-    Query and analyze traces with Python APIs:
+MLflow Tracing is production ready and provides comprehensive monitoring capabilities for your GenAI applications in production environments. The tracing system captures detailed execution information that can be integrated with your existing observability stack through OpenTelemetry standards.
 
-    **Search traces** with filters and conditions using <APILink fn="mlflow.search_traces" />
+For production deployments, consider using the [Lightweight Tracing SDK](/genai/tracing/lightweight-sdk) (`mlflow-tracing`) that is optimized for reducing the total installation size and minimizing dependencies while maintaining full tracing capabilities.
 
-    **Retrieve specific traces** for detailed analysis
-
-    **Export data** for custom analysis or integration with other tools
-
-    **Build custom dashboards** and monitoring solutions
-  </TabItem>
-</Tabs>
+Read [Production Tracing](/genai/tracing/prod-tracing) for complete guidance on using MLflow Tracing for monitoring models in production and various backend configuration options.
 
 ## Getting Started
 
@@ -219,8 +218,6 @@ While tracing features are available in MLflow 2.15.0+, **it is strongly recomme
 
 MLflow 3 provides enhanced support for production-grade tracing, including advanced feedback and labeling functionalities crucial for managing GenAI applications.
 :::
-
-To begin capturing traces and leveraging the observability benefits described above, the first step is to instrument your application. MLflow offers flexible ways to do this, whether you prefer automatic instrumentation for supported libraries or manual tracing for custom code.
 
 ### Installation
 
@@ -236,38 +233,44 @@ For production environments focused solely on tracing:
 pip install mlflow-tracing
 ```
 
-### Next Steps
+### Start Tracing in Minutes
+
+Getting started with MLflow Tracing is remarkably simple. For many popular GenAI libraries, you can enable comprehensive tracing with just a single line of code:
+
+```python
+import mlflow
+import openai
+
+# Enable automatic tracing - that's it!
+mlflow.openai.autolog()
+
+# Your existing code works unchanged and is now fully traced
+client = openai.OpenAI()
+response = client.chat.completions.create(
+    model="gpt-4o-mini",
+    messages=[{"role": "user", "content": "Explain MLflow Tracing"}],
+    max_tokens=100,
+)
+```
+
+MLflow Tracing captures inputs, outputs, latencies, and metadata automatically. Start the MLflow UI with `mlflow ui` to view your traces at `http://localhost:5000`.
+
+### Next Steps for Your Application
 
 <Tabs>
   <TabItem value="instrument" label="Instrument Your App" default>
-    Start by instrumenting your application to capture traces:
-
-    **[App Instrumentation Guide](/genai/tracing/app-instrumentation)** - Complete guide to adding tracing to your application
-
-    **[Automatic Tracing](/genai/tracing/app-instrumentation/automatic)** - One-line tracing for 20+ supported libraries
-
-    **[Manual Tracing](/genai/tracing/app-instrumentation/manual-tracing)** - Custom instrumentation for any Python code
+    Start by instrumenting your application to capture traces with the **[App Instrumentation Guide](/genai/tracing/app-instrumentation)** for a complete guide to adding tracing to your application. Use **[Automatic Tracing](/genai/tracing/app-instrumentation/automatic)** for one-line tracing with 20+ supported libraries, or **[Manual Tracing](/genai/tracing/app-instrumentation/manual-tracing)** for custom instrumentation with any Python code.
   </TabItem>
   <TabItem value="integrations" label="Library Integrations">
-    Explore specific integrations for your framework:
-
-    **[OpenAI Integration](/genai/tracing/integrations/listing/openai)** - Trace OpenAI API calls
-
-    **[LangChain Integration](/genai/tracing/integrations/listing/langchain)** - Trace LangChain applications
-
-    **[LlamaIndex Integration](/genai/tracing/integrations/listing/llamaindex)** - Trace LlamaIndex workflows
-
-    **[All Integrations](/genai/tracing/integrations)** - Browse all supported libraries
+    Explore specific integrations for your framework, including **[OpenAI Integration](/genai/tracing/integrations/listing/openai)** to trace OpenAI API calls, **[LangChain Integration](/genai/tracing/integrations/listing/langchain)** to trace LangChain applications, **[LlamaIndex Integration](/genai/tracing/integrations/listing/llama_index)** to trace LlamaIndex workflows, and **[All Integrations](/genai/tracing/integrations)** to browse all supported libraries.
   </TabItem>
   <TabItem value="analyze" label="Analyze Traces">
-    Learn how to work with your trace data:
-
-    **[Viewing Traces](/genai/tracing/observe-with-traces/ui)** - Explore traces in the MLflow UI
-
-    **[Querying Traces](/genai/tracing/search-traces)** - Programmatically search and retrieve traces
-
-    **[Trace Data Model](/genai/tracing/data-model)** - Understand trace structure and components
+    Learn how to work with your trace data through **[Viewing Traces](/genai/tracing/observe-with-traces/ui)** to explore traces in the MLflow UI, **[Querying Traces](/genai/tracing/search-traces)** to programmatically search and retrieve traces, and understanding the **[Trace Data Model](/genai/tracing/data-model)** to comprehend trace structure and components.
   </TabItem>
 </Tabs>
 
 Visit the **[Instrument your app](/genai/tracing/app-instrumentation)** guide to learn how to integrate MLflow Tracing into your GenAI projects. This will enable you to start logging detailed execution data, which is the foundation for debugging, performance analysis, and quality evaluation.
+
+:::note
+MLflow Tracing support is available with **MLflow 2.14.0+**, but we strongly recommend **MLflow 3** for the latest features and enhanced production support.
+:::
