--- a/docs/docs/genai/tracing/observe-with-traces/index.mdx
+++ b/docs/docs/genai/tracing/observe-with-traces/index.mdx
@@ -1,175 +1,103 @@
 import DatabricksCallout from "@site/src/components/DatabricksCallout"
 
-# Debug & Observe Your App with Tracing
+# Observe & Analyze Traces
 
 <DatabricksCallout docsPath="/mlflow3/genai/tracing/observe-with-traces/index" />
 
-Once your GenAI application is instrumented with MLflow Tracing, you gain powerful tools to debug its behavior, understand its performance, and observe its inputs and outputs. This guide focuses on how to effectively use MLflow's tracing capabilities to monitor, analyze, and improve your AI applications.
+Once your GenAI application is instrumented with MLflow Tracing, you gain powerful tools to observe its behavior, analyze its performance, and understand its inputs and outputs. This guide focuses on how to effectively use MLflow's observability capabilities to monitor, debug, and continuously improve your AI applications.
 
-## Why Use Tracing for GenAI Applications?
+## Why Observability Matters for GenAI Applications
 
-Generative AI applications often involve complex workflows with multiple components: LLM calls, retrieval systems, data processing, and business logic. Understanding what happens inside these "black boxes" is crucial for:
+Generative AI applications often involve complex workflows with multiple components including LLM calls, retrieval systems, data processing, and business logic. Understanding what happens inside these systems is crucial for debugging issues and identifying where failures occur, optimizing performance by finding bottlenecks and understanding resource usage patterns, and monitoring quality by tracking model outputs and system reliability over time.
 
-**🐛 Debugging Issues**: Identify where failures occur, what inputs caused problems, and how errors propagate through your system
+Observability also enables root cause analysis, allowing you to trace problems back to their source across complex multi-step workflows. This foundation supports continuous improvement by providing the data needed to make informed decisions about system enhancements.
 
-**⚡ Performance Optimization**: Find bottlenecks, optimize slow operations, and understand resource usage patterns
+## MLflow Observability Tools
 
-**📊 Quality Monitoring**: Track model outputs, user satisfaction, and system reliability over time
+MLflow Tracing provides multiple interfaces for observing and analyzing your applications, each optimized for different use cases and workflows.
 
-**🔍 Root Cause Analysis**: Trace problems back to their source across complex multi-step workflows
+### MLflow UI - Comprehensive Web Interface
 
-**📈 Continuous Improvement**: Use observability data to make informed decisions about system enhancements
+The MLflow web interface provides the most comprehensive trace visualization and management capabilities. The trace list view allows you to browse all traces with powerful filtering, searching, and sorting capabilities. You can filter by execution time, user, session, tags, or custom attributes, search trace content and metadata, and sort by various metrics to identify patterns.
 
-## Observability Tools Overview
+The detailed trace explorer enables deep inspection of individual traces through an interactive span hierarchy visualization. You can examine input and output data for each operation, analyze performance timelines to identify bottlenecks, and review error details and stack traces when issues occur.
 
-MLflow Tracing provides multiple interfaces for debugging and observing your applications:
-
-### MLflow UI - Web Interface
-
-The MLflow web interface provides comprehensive trace visualization and management capabilities:
-
-**📋 Trace List View**: Browse all traces with filtering, searching, and sorting capabilities
-- Filter by execution time, user, session, tags, or custom attributes
-- Search trace content and metadata
-- Sort by various metrics to identify patterns
-
-**🔍 Detailed Trace Explorer**: Dive deep into individual traces
-- Interactive span hierarchy visualization
-- Input/output inspection for each operation
-- Performance timeline and bottleneck identification
-- Error details and stack traces
-
-**🏷️ Tag and Metadata Management**: Organize and categorize traces
-- Add custom tags for better organization
-- Edit trace metadata directly in the UI
-- Use tags for filtering and analysis
+The interface also provides tag and metadata management capabilities, allowing you to add custom tags for better organization, edit trace metadata directly in the UI, and use tags for systematic filtering and analysis.
 
 [**→ Learn more about the MLflow Tracing UI**](/genai/tracing/observe-with-traces/ui)
 
 ### Jupyter Notebook Integration
 
-Debug directly in your development environment with embedded trace visualization:
-
-**🚀 Automatic Display**: Traces appear automatically in notebook cell outputs when created
-
-**🔧 Interactive Development**: Iterate quickly without switching between tools
-
-**📱 Same Rich Features**: Full trace exploration capabilities within notebooks
+For development workflows, MLflow provides embedded trace visualization directly in Jupyter notebooks. Traces appear automatically in notebook cell outputs when created, enabling interactive development without switching between tools. This integration provides the same rich trace exploration capabilities within your development environment.
 
 [**→ Learn more about Jupyter integration**](/genai/tracing/observe-with-traces/ui#jupyter-notebook-integration)
 
-### Programmatic Access
+### Programmatic Access and Analysis
 
-Use Python APIs for custom analysis and automated monitoring:
-
-**🔍 Search and Query**: Find traces programmatically based on complex criteria
-
-**🤖 Automated Monitoring**: Set up alerts and automated quality checks
-
-**📈 Evaluation Integration**: Use traces as input for systematic evaluation workflows
+Python APIs enable custom analysis and automated monitoring workflows. You can search and query traces programmatically based on complex criteria, set up automated monitoring with alerts and quality checks, and integrate traces into systematic evaluation workflows for continuous quality assessment.
 
 [**→ Learn more about programmatic trace access**](/genai/tracing/search-traces)
 
-## Common Debugging Scenarios
+## Common Analysis and Debugging Scenarios
 
-### Performance Issues
+### Performance Analysis
 
-**Identifying Slow Operations**:
-- Sort traces by execution time to find the slowest requests
-- Use the trace timeline to identify bottlenecks within workflows
-- Compare fast vs. slow traces to understand performance patterns
+Understanding performance characteristics helps optimize your application's responsiveness and resource usage. Sort traces by execution time to identify the slowest requests, then use the trace timeline to pinpoint specific bottlenecks within workflows. Compare fast versus slow traces to understand what factors contribute to performance differences.
 
-**Resource Optimization**:
-- Track token usage and costs across different model configurations
-- Monitor memory and compute resource utilization
-- Identify opportunities for caching and optimization
+For resource optimization, track token usage and costs across different model configurations, monitor memory and compute resource utilization, and identify opportunities for caching and optimization based on actual usage patterns.
 
-### Error Diagnosis
+### Error Diagnosis and Resolution
 
-**Finding Failure Patterns**:
-- Filter traces by error status to focus on failures
-- Examine error events and stack traces for root cause analysis
-- Track error rates across different user segments or time periods
+Systematic error analysis helps improve application reliability. Filter traces by error status to focus on failures, then examine error events and stack traces for root cause analysis. Track error rates across different user segments or time periods to identify patterns.
 
-**Input Validation**:
-- Inspect the inputs that caused failures
-- Identify patterns in problematic requests
-- Validate data preprocessing and transformation steps
+Input validation becomes more effective when you can inspect the actual inputs that caused failures, identify patterns in problematic requests, and validate that data preprocessing and transformation steps work correctly across diverse inputs.
 
-### Quality Monitoring
+### Quality Monitoring and Assessment
 
-**Output Analysis**:
-- Review LLM responses for quality and appropriateness
-- Track consistency across similar requests
-- Monitor for harmful or inappropriate content
+Output analysis involves reviewing LLM responses for quality and appropriateness, tracking consistency across similar requests, and monitoring for harmful or inappropriate content. Correlate trace data with user feedback to identify traces that led to user dissatisfaction and track quality metrics across different user segments.
 
-**User Experience**:
-- Correlate trace data with user feedback
-- Identify traces that led to user dissatisfaction
-- Track quality metrics across different user segments
+### Multi-Component Workflow Analysis
 
-### Multi-Component Workflows
+For RAG pipeline debugging, inspect document retrieval quality and relevance, analyze embedding and similarity scores, and trace how retrieved context influences LLM responses. For agent workflows, follow agent decision-making processes, debug tool selection and execution, and understand multi-step reasoning chains.
 
-**RAG Pipeline Debugging**:
-- Inspect document retrieval quality and relevance
-- Analyze embedding and similarity scores
-- Trace how retrieved context influences LLM responses
+## Best Practices for Effective Observability
 
-**Agent Workflows**:
-- Follow agent decision-making processes
-- Debug tool selection and execution
-- Understand multi-step reasoning chains
+### Strategic Instrumentation
 
-## Best Practices for Observability
+Effective observability starts with strategic instrumentation. Add spans for key operations that you want to monitor and debug, include relevant attributes, tags, and context information, and use clear, consistent naming conventions for spans and traces. Ensure errors are properly captured and attributed to the right spans for effective debugging.
 
-### Effective Instrumentation
+### Organization and Data Management
 
-**Strategic Span Creation**: Add spans for key operations that you want to monitor and debug
-
-**Rich Metadata**: Include relevant attributes, tags, and context information
-
-**Consistent Naming**: Use clear, consistent naming conventions for spans and traces
-
-**Error Handling**: Ensure errors are properly captured and attributed to the right spans
-
-### Organization and Management
-
-**Tagging Strategy**: Develop a consistent tagging approach for different environments, users, and use cases
-
-**Data Retention**: Plan for trace storage and cleanup based on your needs
-
-**Access Control**: Consider who needs access to different types of trace data
+Develop a consistent tagging approach for different environments, users, and use cases to enable systematic analysis. Plan for trace storage and cleanup based on your retention needs and consider access control requirements for different types of trace data.
 
 ### Analysis Workflows
 
-**Regular Review**: Establish processes for reviewing traces and identifying issues
+Establish processes for regularly reviewing traces and identifying issues, set up monitoring for key metrics and error rates, and document common debugging patterns and solutions for your team.
 
-**Alerting**: Set up monitoring for key metrics and error rates
+## Trace Management and Lifecycle
 
-**Documentation**: Document common debugging patterns and solutions
+As your application generates traces over time, you'll need to manage trace data effectively. This includes understanding how to query and filter large volumes of traces, implementing appropriate data retention policies, and removing traces when necessary for privacy or storage management.
 
-## Getting Started
+[**→ Learn about deleting and managing traces**](/genai/tracing/observe-with-traces/delete-traces)
 
-1. **Instrument Your Application**: Start with [automatic tracing](/genai/tracing/app-instrumentation/automatic) for supported frameworks, then add [manual tracing](/genai/tracing/app-instrumentation/manual-tracing) for custom components
+## Getting Started with Trace Observability
 
-2. **Explore the UI**: Use the [MLflow Tracing UI](/genai/tracing/observe-with-traces/ui) to familiarize yourself with trace visualization and navigation
+Begin by instrumenting your application with automatic tracing for supported frameworks, then add manual tracing for custom components where needed. Explore the MLflow Tracing UI to familiarize yourself with trace visualization and navigation capabilities.
 
-3. **Set Up Development Workflow**: Configure [Jupyter integration](/genai/tracing/observe-with-traces/ui#jupyter-notebook-integration) for seamless debugging during development
+Set up your development workflow by configuring Jupyter integration for seamless debugging during development. Plan your observability strategy by defining tagging conventions, retention policies, and monitoring processes that align with your team's needs.
 
-4. **Plan Your Observability Strategy**: Define tagging conventions, retention policies, and monitoring processes
-
-5. **Iterate and Improve**: Use trace insights to continuously optimize your application's performance and quality
+Use trace insights to continuously optimize your application's performance and quality, creating a feedback loop between observability data and application improvements.
 
 ## Next Steps
 
-**[Search and Query Traces](/genai/tracing/search-traces)**: Build custom analysis and monitoring solutions
+**[MLflow Tracing UI](/genai/tracing/observe-with-traces/ui)**: Master the web interface for comprehensive trace exploration and management
 
-**[Delete and Manage Traces](/genai/tracing/observe-with-traces/delete-traces)**: Implement data lifecycle management
+**[Search and Query Traces](/genai/tracing/search-traces)**: Build custom analysis and monitoring solutions using programmatic access
 
-**[Automatic Tracing](/genai/tracing/app-instrumentation/automatic)**: Instrument popular frameworks with one line of code
+**[Delete and Manage Traces](/genai/tracing/observe-with-traces/delete-traces)**: Implement effective data lifecycle management for your traces
 
-**[Manual Tracing](/genai/tracing/app-instrumentation/manual-tracing)**: Add custom instrumentation for complete observability
+**[Collect User Feedback](/genai/tracing/collect-user-feedback)**: Enhance trace data with user feedback for quality analysis
 
 ---
 
-*With MLflow Tracing's comprehensive observability tools, you can transform your GenAI applications from black boxes into transparent, debuggable, and continuously improvable systems.*
+*MLflow Tracing's comprehensive observability tools transform your GenAI applications from black boxes into transparent, analyzable, and continuously improvable systems.*
