--- a/docs/docs/genai/tracing/quality-with-traces.mdx
+++ b/docs/docs/genai/tracing/quality-with-traces.mdx
@@ -1,330 +1,161 @@
 import { APILink } from "@site/src/components/APILink";
 import DatabricksCallout from "@site/src/components/DatabricksCallout"
 
-# Use Traces to Evaluate and Improve Quality
+# Advanced Trace Quality Review
 
-Traces are not just for debugging—they contain valuable information that can drive systematic quality improvements in your GenAI applications. This guide shows you how to analyze traces to identify quality issues, create evaluation datasets from trace data, implement targeted improvements, and measure the impact of your changes.
+Traces contain rich information beyond debugging that can drive systematic quality improvements in your GenAI applications. This guide shows advanced techniques for analyzing trace patterns, extracting evaluation datasets from production data, and measuring the impact of quality improvements using programmatic analysis.
 
 <DatabricksCallout docsPath="/mlflow3/genai/tracing/quality-with-traces" />
 
-## Analyzing Traces to Identify Quality Issues
+## Analyzing Trace Patterns for Quality Insights
 
-Traces provide detailed insights into how your application processes user requests. By analyzing these traces, you can identify patterns of quality issues and opportunities for improvement.
+Traces provide detailed insights into how your application processes user requests, allowing you to identify patterns of quality issues and opportunities for improvement. The MLflow UI offers basic filtering and visualization, but programmatic analysis unlocks deeper insights into quality patterns.
 
-### Use the MLflow UI for Visual Analysis
+### Quantitative Analysis with Programmatic Queries
 
-- Filter by specific tags (e.g., `tags.issue_type = "hallucination"`)
-- Search for traces containing specific inputs or outputs
-- Sort by metadata like latency or token usage
-- Group traces by performance characteristics
-
-### Query Traces Programmatically
-
-Perform advanced analysis using the search API:
+When you need to understand what characteristics lead to quality issues, you can search for traces with specific patterns and analyze their common attributes. Using the search API makes it easy to perform complex analysis on large sets of traces:
 
 ```python
 import mlflow
+import pandas as pd
 
-# Search for traces with potential quality issues
-traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="execution_time_ms > 3000 AND status = 'OK'",
+# Search for traces with potential quality issues using tags
+traces_df = mlflow.search_traces(
+    filter_string="tag.quality_score < 0.7",
     max_results=100,
-    return_type="list",
+    extract_fields=[
+        "span.end_time",
+        "span.inputs.messages",
+        "span.outputs.choices",
+        "span.attributes.usage.total_tokens",
+    ],
 )
 
-# Analyze patterns
-execution_times = [trace.info.execution_time_ms for trace in traces]
-print(
-    f"Found {len(traces)} slow traces with average time: {sum(execution_times)/len(execution_times):.2f}ms"
-)
-
-# Look for correlations with tags
-slow_trace_tags = {}
-for trace in traces:
-    for key, value in trace.data.tags.items():
-        if key not in slow_trace_tags:
-            slow_trace_tags[key] = []
-        slow_trace_tags[key].append(value)
-
-print("Common characteristics of slow traces:")
-for key, values in slow_trace_tags.items():
-    unique_values = set(values)
-    if len(unique_values) < len(values):  # If there are repeated values
-        print(f"  {key}: {unique_values}")
+# Analyze patterns - check if quality issues correlate with token usage
+if not traces_df.empty and "span.attributes.usage.total_tokens" in traces_df.columns:
+    correlation = traces_df["span.attributes.usage.total_tokens"].corr(
+        traces_df["tag.quality_score"]
+    )
+    print(f"Correlation between token usage and quality: {correlation}")
 ```
 
-### Compare High-Quality vs Low-Quality Traces
+### Qualitative Analysis Through Trace Comparison
 
-```python
-# Find high-quality and low-quality traces
-high_quality = mlflow.search_traces(
-    experiment_ids=["1"], filter_string="tags.feedback = 'positive'", max_results=20
-)
+Beyond quantitative metrics, examining individual traces helps identify qualitative patterns. Review traces that represent common failure modes by examining the inputs that led to low-quality outputs and looking for patterns in how your application handled these cases.
 
-low_quality = mlflow.search_traces(
-    experiment_ids=["1"], filter_string="tags.feedback = 'negative'", max_results=20
-)
+Compare high-quality versus low-quality traces to understand what differs in how your application processes different inputs. Are there specific types of queries that consistently lead to quality issues? This analysis helps identify missing context or faulty reasoning patterns.
 
-# Compare average execution times
-high_times = [t.info.execution_time_ms for t in high_quality]
-low_times = [t.info.execution_time_ms for t in low_quality]
+## Building Evaluation Datasets from Production Traces
 
-if high_times and low_times:
-    print(f"High quality avg time: {sum(high_times)/len(high_times):.2f}ms")
-    print(f"Low quality avg time: {sum(low_times)/len(low_times):.2f}ms")
-```
+Once you've identified representative traces, you can curate them into evaluation datasets for systematic testing. Production traces represent real user interactions and edge cases that synthetic datasets often miss.
 
-## Creating Evaluation Datasets from Trace Data
+### Extracting Representative Traces
 
-Once you've identified representative traces, you can curate them into evaluation datasets for systematic testing.
-
-### Export Traces to Dataset
+The key to building useful evaluation datasets is selecting traces that represent important test cases and the diversity of real user interactions:
 
 ```python
 import mlflow
 import pandas as pd
 
 # Query traces that represent important test cases
-traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="timestamp_ms > 1698876000000",  # Recent traces
+traces_df = mlflow.search_traces(
+    filter_string="trace.timestamp > '2023-07-01'",
     max_results=500,
-    return_type="list",
+    extract_fields=["span.inputs.messages", "span.outputs.choices"],
 )
 
 # Prepare dataset format
 eval_data = []
-for trace in traces:
-    trace_entry = {
-        "trace_id": trace.info.trace_id,
-        "execution_time_ms": trace.info.execution_time_ms,
-        "status": trace.info.status,
-        "timestamp_ms": trace.info.timestamp_ms,
-    }
+for _, row in traces_df.iterrows():
+    # Extract user query from messages
+    messages = row["span.inputs.messages"]
+    user_query = next(
+        (msg["content"] for msg in messages if msg["role"] == "user"), None
+    )
 
-    # Add tags as columns
-    for key, value in trace.data.tags.items():
-        trace_entry[f"tag_{key}"] = value
+    # Extract model response
+    response = (
+        row["span.outputs.choices"][0]["message"]["content"]
+        if row["span.outputs.choices"]
+        else None
+    )
 
-    eval_data.append(trace_entry)
+    if user_query and response:
+        eval_data.append({"input": user_query, "output": response})
 
 # Create evaluation dataset
 eval_df = pd.DataFrame(eval_data)
 eval_df.to_csv("evaluation_dataset.csv", index=False)
 ```
 
-### Add Quality Labels
+### Adding Ground Truth and Quality Indicators
+
+After extracting the basic input-output pairs, enhance your dataset with ground truth or expected outputs. Include quality indicators or specific aspects to evaluate, and consider leveraging domain experts to review and annotate the dataset for more comprehensive evaluation.
+
+### Registering the Dataset with MLflow
+
+Once you have prepared your evaluation dataset, register it with MLflow for systematic tracking and reuse:
 
 ```python
-# Add quality categorization
-def categorize_quality(execution_time, status, has_positive_feedback=False):
-    if status == "ERROR":
-        return "poor"
-    elif has_positive_feedback:
-        return "excellent"
-    elif execution_time < 1000:
-        return "good"
-    else:
-        return "acceptable"
+import mlflow
 
-
-eval_df["quality_label"] = eval_df.apply(
-    lambda row: categorize_quality(
-        row["execution_time_ms"], row["status"], row.get("tag_feedback") == "positive"
-    ),
-    axis=1,
-)
-
-# Log dataset to MLflow
-with mlflow.start_run():
+# Log the evaluation dataset for tracking and reuse
+with mlflow.start_run() as run:
     mlflow.log_artifact("evaluation_dataset.csv", "evaluation_datasets")
     mlflow.log_param("dataset_size", len(eval_df))
+    mlflow.log_param("data_source", "production_traces")
 ```
 
 ## Implementing Targeted Improvements
 
-### Prompt Engineering with Traces
+With identified issues and evaluation datasets in hand, you can make targeted improvements to address specific quality patterns discovered through trace analysis.
 
-Use traces to optimize prompts systematically:
+### Prompt Engineering Based on Trace Insights
 
-```python
-import mlflow
+Refine system prompts to address specific failure patterns identified in your trace analysis. Add more explicit guidelines for handling edge cases, include examples that demonstrate how to handle problematic inputs, and adjust the tone or style to better meet user expectations.
 
-
-@mlflow.trace
-def evaluate_prompt_version(prompt, version, input_text):
-    """Evaluate a specific prompt version with tracing."""
-
-    mlflow.update_current_trace(
-        tags={
-            "prompt_name": prompt.name,
-            "prompt_version": str(version),
-            "evaluation_type": "prompt_comparison",
-        }
-    )
-
-    from openai import OpenAI
-
-    client = OpenAI()
-
-    # Format and execute prompt
-    formatted_prompt = prompt.format(num_sentences=2, sentences=input_text)
-
-    response = client.chat.completions.create(
-        model="gpt-4o-mini",
-        messages=[{"role": "user", "content": formatted_prompt}],
-    )
-
-    result = response.choices[0].message.content
-
-    # Add metrics to trace
-    mlflow.update_current_trace(
-        attributes={
-            "response_length": len(result),
-            "token_usage": response.usage.total_tokens,
-        }
-    )
-
-    return result
-
-
-# Compare prompt versions
-prompt_v1 = mlflow.load_prompt("prompts:/summarization-prompt/1")
-prompt_v2 = mlflow.load_prompt("prompts:/summarization-prompt/2")
-
-test_input = (
-    "MLflow is an open source platform for managing machine learning lifecycles..."
-)
-
-result_v1 = evaluate_prompt_version(prompt_v1, 1, test_input)
-result_v2 = evaluate_prompt_version(prompt_v2, 2, test_input)
-```
+Add guardrails to prevent common quality issues by implementing validation steps in your application logic and adding post-processing to check outputs before presenting them to users.
 
 ### Application Architecture Improvements
 
-```python
-@mlflow.trace
-def improved_response_function(user_message):
-    """Enhanced function based on trace analysis."""
+If your application uses retrieval mechanisms, enhance them when relevant documents aren't being found. Examine retrieval spans in traces to see what's being retrieved, improve embedding models or retrieval algorithms, and consider chunking strategies if document segments are suboptimal.
 
-    mlflow.update_current_trace(
-        tags={"version": "v2.0", "improvement_target": "reduce_latency"}
-    )
-
-    # Add validation based on trace insights
-    if len(user_message.strip()) < 3:
-        mlflow.update_current_trace(tags={"validation": "rejected_too_short"})
-        return "Please provide a more detailed question."
-
-    # Your improved application logic here
-    from openai import OpenAI
-
-    client = OpenAI()
-
-    response = client.chat.completions.create(
-        model="gpt-4o-mini", messages=[{"role": "user", "content": user_message}]
-    )
-
-    return response.choices[0].message.content
-```
+For complex decision processes, add reasoning steps by breaking down complex tasks into multiple spans, implementing chain-of-thought or other reasoning techniques, and adding verification steps for critical outputs.
 
 ## Measuring Quality Improvements
 
-### Compare Performance Before and After
+After implementing changes, use MLflow to measure their impact through systematic evaluation and production monitoring.
+
+### Systematic Evaluation Using Curated Datasets
+
+Run systematic evaluations using your curated dataset to compare the original and improved models on real production scenarios:
 
 ```python
 import mlflow
-from datetime import datetime, timedelta
+from mlflow.evaluators import evaluate
 
-
-def compare_before_after_improvement():
-    """Compare trace performance before and after improvements."""
-
-    # Define improvement deployment date
-    improvement_date = datetime(2024, 6, 1)
-
-    # Get traces before and after improvement
-    before_traces = mlflow.search_traces(
-        experiment_ids=["1"],
-        filter_string=f"timestamp_ms < {int(improvement_date.timestamp() * 1000)}",
-        max_results=200,
-    )
-
-    after_traces = mlflow.search_traces(
-        experiment_ids=["1"],
-        filter_string=f"timestamp_ms >= {int(improvement_date.timestamp() * 1000)}",
-        max_results=200,
-    )
-
-    # Compare key metrics
-    def calculate_metrics(traces):
-        if not traces:
-            return {}
-
-        execution_times = [t.info.execution_time_ms for t in traces]
-        statuses = [t.info.status for t in traces]
-
-        return {
-            "avg_execution_time": sum(execution_times) / len(execution_times),
-            "error_rate": statuses.count("ERROR") / len(statuses),
-            "total_traces": len(traces),
-        }
-
-    before_metrics = calculate_metrics(before_traces)
-    after_metrics = calculate_metrics(after_traces)
-
-    print("Performance Comparison:")
-    print(f"Before: {before_metrics}")
-    print(f"After: {after_metrics}")
-
-    # Calculate improvements
-    if before_metrics and after_metrics:
-        time_improvement = (
-            (before_metrics["avg_execution_time"] - after_metrics["avg_execution_time"])
-            / before_metrics["avg_execution_time"]
-            * 100
-        )
-        print(f"Execution time improvement: {time_improvement:.1f}%")
-
-
-compare_before_after_improvement()
-```
-
-### Using MLflow Evaluation
-
-For systematic evaluation with OSS MLflow:
-
-```python
-import mlflow
-import pandas as pd
-
-# Load your curated evaluation dataset
-eval_data = pd.read_csv("evaluation_dataset.csv")
-
-# Prepare data for MLflow evaluation
-evaluation_data = pd.DataFrame(
-    {
-        "inputs": eval_data["tag_user_input"].fillna(""),
-        "targets": eval_data["tag_expected_output"].fillna(""),
-        "predictions": eval_data["tag_actual_output"].fillna(""),
-    }
+# Compare the original and improved models on your dataset
+results = mlflow.genai.evaluate(
+    data="evaluation_dataset.csv",
+    model=improved_model,  # Your improved model/application
+    baseline_model=original_model,  # The original version for comparison
+    evaluators=["mlflow_model"],
+    evaluator_config={
+        "custom_metrics": [
+            # Define your quality metrics here
+        ]
+    },
 )
 
-# Run evaluation
-with mlflow.start_run():
-    results = mlflow.evaluate(
-        data=evaluation_data,
-        targets="targets",
-        predictions="predictions",
-        extra_metrics=[
-            mlflow.metrics.exact_match(),
-            mlflow.metrics.toxicity(),
-        ],
-    )
-
-    print(f"Evaluation results: {results.metrics}")
+# View the results
+print(results.metrics)
 ```
+
+### Production Monitoring After Improvements
+
+Monitor production traces after deploying improvements by setting up dashboards to track quality metrics over time, monitoring for regressions or unexpected behavior, and continuously collecting new traces to identify emerging issues.
+
+This systematic approach ensures that your improvements have measurable impact and helps identify any unintended consequences of the changes.
 
 ## Advanced Evaluation with Databricks
 
@@ -333,35 +164,31 @@ For comprehensive GenAI evaluation capabilities including LLM-as-a-judge metrics
 
 You can get started with a [free trial today](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS) with no strings attached to try out these advanced features.
 
-Databricks allows you to access:
-- Advanced LLM-as-a-judge evaluation
-- Automated quality scoring in production
-- Comprehensive evaluation pipelines
-- Built-in quality and safety metrics
+Databricks provides advanced LLM-as-a-judge evaluation, automated quality scoring in production, comprehensive evaluation pipelines, and built-in quality and safety metrics.
 :::
+
+## Integration with Quality Improvement Workflows
+
+Advanced trace analysis becomes most valuable when integrated into systematic quality improvement processes. Use trace insights to identify improvement opportunities, implement targeted changes, and measure their effectiveness through continued trace analysis.
+
+Consider setting up automated analysis pipelines that regularly examine trace patterns, flag quality degradations, and generate evaluation datasets from new production interactions. This creates a continuous feedback loop where your production data directly informs quality improvements.
 
 ## Next Steps
 
-Continue improving your GenAI application quality:
+**[Search Traces](/genai/tracing/search-traces)**: Master advanced filtering and querying techniques for trace analysis
 
-- **[Search Traces](/genai/tracing/search-traces)**: Learn advanced techniques for finding specific traces
-- **[Set Trace Tags](/genai/tracing/attach-tags)**: Organize traces for better quality analysis
-- **[Production Monitoring](/genai/tracing/prod-tracing)**: Set up comprehensive production observability
-- **[Prompt Management](/genai/prompts)**: Version and manage prompts systematically
-- **[GenAI Evaluation](/genai/eval-monitor)**: Evaluate your applications for quality and stability
+**[Collect User Feedback](/genai/tracing/collect-user-feedback)**: Set up structured feedback collection for quality assessment
+
+**[Production Monitoring](/genai/tracing/prod-tracing)**: Implement comprehensive production observability
+
+**[GenAI Evaluation](/genai/eval-monitor)**: Use systematic evaluation frameworks for quality assessment
 
 :::tip
-Quality improvement is an iterative process. Start with your most critical quality issues, implement targeted improvements based on trace analysis, measure their impact, and repeat.
+Quality improvement is most effective when based on real production data. Use trace analysis to identify actual user pain points rather than hypothetical issues, and measure improvements using the same trace data to ensure your changes have real impact.
 :::
 
 ## Summary
 
-Using traces for quality evaluation enables:
+Advanced trace quality review enables data-driven quality improvements through systematic analysis of production interactions. By analyzing trace patterns through both quantitative metrics and qualitative examination, you can identify common failure modes and quality issues that impact user experience.
 
-- **Pattern Discovery**: Identify common failure modes and quality issues
-- **Data-Driven Improvements**: Base improvements on real production data
-- **Systematic Testing**: Create evaluation datasets from representative traces
-- **Impact Measurement**: Quantify the effect of your improvements
-- **Continuous Monitoring**: Track quality trends over time
-
-Traces provide the observability foundation needed to build and maintain high-quality GenAI applications.
+Building evaluation datasets from real traces ensures your testing reflects actual usage patterns rather than synthetic scenarios, while systematic evaluation using MLflow provides concrete measurement of quality improvements. This approach transforms traces from debugging tools into a comprehensive quality intelligence system for continuous improvement of your GenAI applications.
